# backend/app/api/v1/locations/country_services/utils.py
@@ -1,10 +1,9 @@
 import requests
 import json
-from .schemas import CountryResponse
 from bs4 import BeautifulSoup
 
 
-def update_leaders(request):
+def update_leaders():
     url = "https://en.wikipedia.org/wiki/List_of_current_heads_of_state_and_government"
     response = requests.get(url, verify=False)
     html_content = response.text
@@ -52,7 +51,5 @@ def update_leaders(request):
             })
 
     # Save the leaders data to a JSON file in the static directory
-    with open('/static/countries/leaders.json', 'w') as file:
+    with open('/static/locations/leaders.json', 'w') as file:
         json.dump(leaders, file)
-
-    return leaders
